ostree (2018.2-1) UNRELEASED; urgency=medium

  * New upstream release
    - d/copyright: Update
    - d/libostree-1-1.symbols: Update

 -- Simon McVittie <smcv@debian.org>  Mon, 19 Feb 2018 08:29:00 +0000

ostree (2018.1-1) unstable; urgency=medium

  * New upstream release
    - d/copyright: Update
    - d/patches: Remove, applied upstream
    - d/libostree-1-1.symbols: Update
  * Move Vcs-* to salsa.debian.org
    d/p/test-concurrency-Explicitly-use-floor-division.patch,
    d/p/tests-bootloader-entries-crosscheck-Use-Python-3-friendly.patch:
    Make tests compatible with Python 3
  * d/control, d/p/debian/Use-Python-3-for-tests.patch:
    Switch build-time tests and autopkgtests to Python 3

 -- Simon McVittie <smcv@debian.org>  Wed, 17 Jan 2018 15:34:46 +0000

ostree (2017.15-2) unstable; urgency=medium

  * d/p/2018.1/tests-Don-t-assume-uid-primary-gid.patch: Mark as applied
    upstream in 2018.1
  * d/p/2018.1/tests-Assert-that-byte-order-[etc.].patch:
    Add patch to fix test failures on big-endian machines
    (Closes: #886218)
  * Temporarily disable gjs tests. gjs is not currently installable on
    buildds due to the glibc transition and a long dependency chain
    involving systemd-shim being preferred over systemd-sysv, which
    ends with libnih1 Depends: libc6 (<< 2.26).

 -- Simon McVittie <smcv@debian.org>  Thu, 04 Jan 2018 19:26:16 +0000

ostree (2017.15-1) unstable; urgency=medium

  * New upstream release
    - d/libostree-1-1.symbols: Update
  * d/rules: Stop forcing C.UTF-8 locale: the tests now do this internally
  * Standards-Version: 4.1.3 (no changes required)
  * d/p/tests-Don-t-assume-uid-primary-gid.patch: Mark as forwarded

 -- Simon McVittie <smcv@debian.org>  Tue, 02 Jan 2018 14:13:08 +0000

ostree (2017.14-1) unstable; urgency=medium

  * New upstream release
    - d/libostree-1-1.symbols: Update
  * Standards-Version: 4.1.2 (no changes required)
  * d/p/tests-Don-t-assume-uid-primary-gid.patch: