@@ -6,6 +6,7 @@ range in Python 3 does what xrange did in Python 2. This still works in
 Python 2, it just uses a bit more memory.
 
 Signed-off-by: Simon McVittie <smcv@debian.org>
+Forwarded: https://github.com/ostreedev/ostree/pull/1457
 ---
  tests/test-concurrency.py | 10 +++++-----
  1 file changed, 5 insertions(+), 5 deletions(-)
