@@ -6,6 +6,7 @@ This is a little clearer than a strcmp()-style negative/zero/positive
 return, and also works in Python 2.
 
 Signed-off-by: Simon McVittie <smcv@debian.org>
+Forwarded: https://github.com/ostreedev/ostree/pull/1457
 ---
  tests/bootloader-entries-crosscheck.py | 6 +++---
  1 file changed, 3 insertions(+), 3 deletions(-)
