@@ -3,6 +3,7 @@ ostree (2018.2-1) UNRELEASED; urgency=medium
   * New upstream release
     - d/copyright: Update
     - d/libostree-1-1.symbols: Update
+  * Mark patches as forwarded
 
  -- Simon McVittie <smcv@debian.org>  Mon, 19 Feb 2018 08:29:00 +0000
 
